@@ -4,8 +4,9 @@ import com.loopone.loopinbe.domain.account.auth.currentUser.CurrentUserDto;
 import com.loopone.loopinbe.domain.account.member.entity.Member;
 import com.loopone.loopinbe.domain.account.member.repository.MemberRepository;
 import com.loopone.loopinbe.domain.chat.chatRoom.service.ChatRoomService;
-import com.loopone.loopinbe.domain.loop.loop.entity.LoopPage;
+
 import com.loopone.loopinbe.domain.team.team.dto.req.TeamCreateRequest;
+import com.loopone.loopinbe.domain.team.team.dto.req.TeamInvitationCreateRequest;
 import com.loopone.loopinbe.domain.team.team.dto.req.TeamOrderUpdateRequest;
 import com.loopone.loopinbe.domain.team.team.dto.res.MyTeamResponse;
 import com.loopone.loopinbe.domain.team.team.dto.res.RecruitingTeamResponse;
@@ -17,11 +18,10 @@ import com.loopone.loopinbe.domain.team.team.entity.TeamPage;
 import com.loopone.loopinbe.domain.team.team.mapper.TeamMapper;
 import com.loopone.loopinbe.domain.team.team.repository.TeamMemberRepository;
 import com.loopone.loopinbe.domain.team.team.repository.TeamRepository;
+import com.loopone.loopinbe.domain.team.team.service.TeamInvitationService;
 import com.loopone.loopinbe.domain.team.team.service.TeamService;
 import com.loopone.loopinbe.domain.team.teamLoop.entity.TeamLoop;
-import com.loopone.loopinbe.domain.team.teamLoop.entity.TeamLoopMemberCheck;
-import com.loopone.loopinbe.domain.team.teamLoop.entity.TeamLoopMemberProgress;
-import com.loopone.loopinbe.domain.team.teamLoop.repository.TeamLoopChecklistRepository;
+
 import com.loopone.loopinbe.domain.team.teamLoop.repository.TeamLoopMemberCheckRepository;
 import com.loopone.loopinbe.domain.team.teamLoop.repository.TeamLoopMemberProgressRepository;
 import com.loopone.loopinbe.domain.team.teamLoop.repository.TeamLoopRepository;
@@ -39,7 +39,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
+
 import java.util.stream.Collectors;
 
 @Slf4j
@@ -53,8 +53,11 @@ public class TeamServiceImpl implements TeamService {
     private final MemberRepository memberRepository;
     private final TeamMapper teamMapper;
     private final TeamLoopRepository teamLoopRepository;
+    private final TeamLoopMemberProgressRepository teamLoopMemberProgressRepository;
+    private final TeamLoopMemberCheckRepository teamLoopMemberCheckRepository;
     private final TeamLoopService teamLoopService;
     private final ChatRoomService chatRoomService;
+    private final TeamInvitationService teamInvitationService;
 
     @Override
     @Transactional
@@ -66,12 +69,10 @@ public class TeamServiceImpl implements TeamService {
 
         // 팀장을 팀원으로 등록
         saveLeaderAsMember(team, leader);
+        chatRoomService.createTeamChatRoom(currentUser.id(), team);
 
-        // 초대된 멤버들 등록
-        List<Member> members = inviteMembers(team, request.invitedNicknames());
-
-        chatRoomService.createTeamChatRoom(currentUser.id(), team, members);
-
+        // 팀원 초대
+        sendInvitationsByNicknames(team, request.invitedNicknames(), currentUser);
         return team.getId();
     }
 
@@ -91,7 +92,7 @@ public class TeamServiceImpl implements TeamService {
     @Override
     public PageResponse<RecruitingTeamResponse> getRecruitingTeams(Pageable pageable, CurrentUserDto currentUser) {
         checkPageSize(pageable.getPageSize());
-        //모든 팀 조회
+        // 모든 팀 조회
         List<Long> myTeamIds = getMyTeamIds(currentUser.id());
         Page<Team> page = myTeamIds.isEmpty()
                 ? teamRepository.findAll(pageable)
@@ -266,6 +267,67 @@ public class TeamServiceImpl implements TeamService {
         teamRepository.delete(team);
     }
 
+    @Override
+    @Transactional
+    public void leaveTeam(Long teamId, CurrentUserDto currentUser) {
+        Team team = getTeamOrThrow(teamId);
+
+        // 팀원 여부 검증
+        validateTeamMember(teamId, currentUser.id());
+
+        // 리더인 경우 나가기 불가
+        if (team.getLeader().getId().equals(currentUser.id())) {
+            throw new ServiceException(ReturnCode.TEAM_LEADER_CANNOT_LEAVE);
+        }
+
+        TeamMember teamMember = teamMemberRepository.findByTeamIdAndMemberId(teamId, currentUser.id())
+                .orElseThrow(() -> new ServiceException(ReturnCode.USER_NOT_IN_TEAM));
+
+        // 팀 루프 체크리스트 완료 내역 삭제
+        teamLoopMemberCheckRepository.deleteByMemberAndTeamIds(currentUser.id(), List.of(teamId));
+
+        // 팀 루프 참여 내역 삭제
+        teamLoopMemberProgressRepository.deleteByMemberAndTeamIds(currentUser.id(), List.of(teamId));
+
+        // 팀 채팅방 나가기
+        chatRoomService.leaveTeamChatRoom(currentUser.id(), teamId);
+
+        // 팀원 관계 삭제
+        teamMemberRepository.delete(teamMember);
+    }
+
+    @Override
+    @Transactional
+    public void removeMember(Long teamId, Long targetMemberId, CurrentUserDto currentUser) {
+        Team team = getTeamOrThrow(teamId);
+
+        // 팀장 권한 검증
+        if (!team.getLeader().getId().equals(currentUser.id())) {
+            throw new ServiceException(ReturnCode.UNAUTHORIZED_TEAM_LEADER_ONLY);
+        }
+
+        // 자기 자신 삭제 방지
+        if (targetMemberId.equals(currentUser.id())) {
+            throw new ServiceException(ReturnCode.CANNOT_REMOVE_SELF);
+        }
+
+        // 대상 팀원이 실제로 팀에 속해있는지 검증
+        TeamMember targetTeamMember = teamMemberRepository.findByTeamIdAndMemberId(teamId, targetMemberId)
+                .orElseThrow(() -> new ServiceException(ReturnCode.USER_NOT_IN_TEAM));
+
+        // 팀 루프 체크리스트 완료 내역 삭제
+        teamLoopMemberCheckRepository.deleteByMemberAndTeamIds(targetMemberId, List.of(teamId));
+
+        // 팀 루프 참여 내역 삭제
+        teamLoopMemberProgressRepository.deleteByMemberAndTeamIds(targetMemberId, List.of(teamId));
+
+        // 팀 채팅방에서 제거
+        chatRoomService.leaveTeamChatRoom(targetMemberId, teamId);
+
+        // 팀원 관계 삭제
+        teamMemberRepository.delete(targetTeamMember);
+    }
+
     // ========== 비즈니스 로직 메서드 ==========
     // 팀 저장
     private Team saveTeam(TeamCreateRequest request, Member leader) {
@@ -288,25 +350,22 @@ public class TeamServiceImpl implements TeamService {
     }
 
     // 멤버 초대 및 등록
-    private List<Member> inviteMembers(Team team, List<String> invitedNicknames) {
+    private void sendInvitationsByNicknames(Team team, List<String> invitedNicknames, CurrentUserDto currentUser) {
         if (invitedNicknames == null || invitedNicknames.isEmpty()) {
-            return null;
+            return;
         }
-
-        // 닉네임 리스트로 멤버 한 번에 조회
-        List<Member> invitedMembers = memberRepository.findAllByNicknameIn(invitedNicknames);
-
-        // TeamMember 리스트 생성
-        List<TeamMember> teamMembers = invitedMembers.stream()
-                .map(member -> TeamMember.builder()
-                        .team(team)
-                        .member(member)
-                        .build())
-                .collect(Collectors.toList());
-
-        teamMemberRepository.saveAll(teamMembers);
-
-        return invitedMembers;
+        // 닉네임으로 멤버 조회
+        List<Member> invitees = memberRepository.findAllByNicknameIn(invitedNicknames);
+        // 팀장 본인 제외 + 중복 제거 + null 방지
+        List<Long> inviteeIds = invitees.stream()
+                .map(Member::getId)
+                .filter(id -> !id.equals(currentUser.id()))
+                .distinct()
+                .toList();
+        if (inviteeIds.isEmpty()) return;
+        TeamInvitationCreateRequest invitationRequest = new TeamInvitationCreateRequest(inviteeIds);
+        // 실제 초대장 발송(= PENDING 생성 + 알림 발행)
+        teamInvitationService.sendInvitation(team.getId(), invitationRequest, currentUser);
     }
 
     // ========== 조회 메서드 ==========
